[package]
name = "rapier"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier3d"] }
bevy_prototype_lyon = "0.10.0"
bevy_rapier2d = "0.23.0"
